--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,55 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Libraries"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/appengine-java-sdk-1.8.4"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/aopalliance-alpha1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/asm-3.3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/aspectjrt-1.6.9.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/aspectjweaver-1.6.8.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/avro-tools-1.6.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-appengine-1.0.10.final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-core-1.1.5.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/datanucleus-jpa-1.1.5.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/geronimo-jpa_3.0_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-core-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-jaxrs-1.9.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jackson-xc-1.9.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jaxb-api-2.2.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jaxb-impl-2.2.4-1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jdom-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jersey-bundle-1.17.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jersey-multipart-1.17.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jersey-spring-1.17.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jettison-1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jetty-util-7.0.0.pre5.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsoup-1.7.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jsr107cache-1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/mail-1.4.4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/mimepull-1.3.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b2-javadoc.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b2-sources.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/rome-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-aop-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-aspects-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-beans-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-context-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-context-support-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-core-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-expression-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-test-3.2.1.RELEASE.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-webmvc-3.2.0.M2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/stax-api-1.0-2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/dyuproject-openid-1.1.6.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/dyuproject-util-1.1.6.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/jgravatar-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-web-3.2.0.M2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
