--- a/.classpath
+++ b/.classpath
@@ -48,5 +48,9 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-web-3.2.0.M2.jar"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/appengine-java-sdk-1.8.4"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/akismet-java-1.02.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-codec-1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/junit-3.8.1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
