--- a/war/WEB-INF/application.properties
+++ b/war/WEB-INF/application.properties
@@ -1,7 +1,8 @@
 error.internal = Se ha producido un error interno
 mail = jorge.amatro@gmail.com
-domain = comprarmovileshoy.com
-brand = Comprar Moviles Hoy
+domain = reservarhotelmadrid.com
+brand = Reservar Hotel Madrid
 emailmail = jorge.amatrome@gmail.com
-emailcontact = hola@comprarmovileshoy.com
-logo= CMovsH
+emailcontact = hola@reservarhotelmadrid.com
+logo= RHM
+description = Información para que puedas reservar hotel en Madrid en el centro de la ciudad o en las afueras y descubrir los mejores lugares para visitar de la capital de España.
