--- a/war/WEB-INF/application.properties
+++ b/war/WEB-INF/application.properties
@@ -1,8 +1,10 @@
 error.internal = Se ha producido un error interno
-mail = jorge.amatro@gmail.com
+#login edit
+mail = reservarhotelmadrid@yahoo.ie
 domain = reservarhotelmadrid.com
 brand = Reservar Hotel Madrid
-emailmail = jorge.amatrome@gmail.com
+#comentarios
+emailmail = web.reservarhotelmadrid@gmail.com
 emailcontact = hola@reservarhotelmadrid.com
 logo= RHM
 description = Información para que puedas reservar hotel en Madrid en el centro de la ciudad o en las afueras y descubrir los mejores lugares para visitar de la capital de España.
