--- a/war/WEB-INF/application.properties
+++ b/war/WEB-INF/application.properties
@@ -6,5 +6,6 @@ brand = Reservar Hotel Madrid
 #comentarios
 emailmail = web.reservarhotelmadrid@gmail.com
 emailcontact = hola@reservarhotelmadrid.com
-logo= RHM
+logo = RHM
 description = Información para que puedas reservar hotel en Madrid en el centro de la ciudad o en las afueras y descubrir los mejores lugares para visitar de la capital de España.
+keyakis = 3d64b3debcbc
