--- a/war/WEB-INF/application.properties
+++ b/war/WEB-INF/application.properties
@@ -9,3 +9,5 @@ emailcontact = hola@reservarhotelmadrid.com
 logo = RHM
 description = Información para que puedas reservar hotel en Madrid en el centro de la ciudad o en las afueras y descubrir los mejores lugares para visitar de la capital de España.
 keyakis = 3d64b3debcbc
+photowidth = 510
+photoheight = 375
